fix content in material ui dialogs being cut off
This was introduced a while ago with an update which I tried to revert
but failed.
I don't like the changes that were made in general.

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,10 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 	monospace;
 }
+
+/*
+ * HACK: fix content in dialogs being cut off
+ */
+.MuiDialogContent-root {
+	overflow-y: visible !important;
+}
